  * bugfix: override any ambient $SIG{__DIE__} handler when using eval { }

version 0.000; 2007-02-10

  * initial released version