@@ -1,4 +1,4 @@
-Makefile Makefile.old
-blib pm_to_blib
-META.yml
+Build Makefile Makefile.old
+_build blib pm_to_blib
+META.yml Makefile.PL SIGNATURE
 DateTime-TimeZone-Tzfile-*
