@@ -1,0 +1,32 @@
+use warnings;
+use strict;
+no strict "subs";
+
+use Module::Build;
+
+Module::Build->new(
+	module_name => "DateTime::TimeZone::Tzfile",
+	license => "perl",
+	build_requires => {
+		Module::Build => 0,
+		Test::More => 0,
+		perl => "5.006",
+		strict => 0,
+		warnings => 0,
+	},
+	requires => {
+		Carp => 0,
+		DateTime::TimeZone::SystemV => 0,
+		IO::File => "1.03",
+		IO::Handle => "1.08",
+		constant => 0,
+		perl => "5.006",
+		strict => 0,
+		warnings => 0,
+	},
+	dynamic_config => 0,
+	create_makefile_pl => "passthrough",
+	sign => 1,
+)->create_build_script;
+
+exit 0;
