@@ -14,10 +14,10 @@ instances can be used with DateTime objects.
 
 INSTALLATION
 
-	perl Makefile.PL
-	make
-	make test
-	make install
+	perl Build.PL
+	./Build
+	./Build test
+	./Build install
 
 AUTHOR
 
