@@ -1,5 +1,11 @@
   * bugfix: override any ambient $SIG{__DIE__} handler when using eval { }
 
+  * build with Module::Build instead of ExtUtils::MakeMaker
+
+  * complete dependency list
+
+  * include signature in distribution
+
 version 0.000; 2007-02-10
 
   * initial released version
